# models/ModelName.go
@@ -1,28 +1,29 @@
 package models
 
-type madame struct {
+type Madalena struct {
 	Model
 
-	Name       string `json:"name"`
+	ModuleName string `json:"module_name"`
 	CreatedBy  string `json:"created_by"`
 	ModifiedBy string `json:"modified_by"`
 	State      int    `json:"state"`
+	ParentId   int    `json:"parent_id"`
 }
 
-func GetModelNames(pageNum int, pageSize int, maps interface{}) (modelNames []madame) {
+func GetModelNames(pageNum int, pageSize int, maps interface{}) (modelNames []Madalena) {
 	db.Where(maps).Offset(pageNum).Limit(pageSize).Find(&modelNames)
 
 	return
 }
 
 func GetModelNameTotal(maps interface{}) (count int) {
-	db.Model(&madame{}).Where(maps).Count(&count)
+	db.Model(&Madalena{}).Where(maps).Count(&count)
 
 	return
 }
 func ExistModelNameByName(name string) bool {
-	var modelName madame
-	db.Select("id").Where("name = ?", name).First(&modelName)
+	var modelName Madalena
+	db.Select("id").Where("module_name = ?", name).First(&modelName)
 	if modelName.ID > 0 {
 		return true
 	}
@@ -30,18 +31,19 @@ func ExistModelNameByName(name string) bool {
 	return false
 }
 
-func AddModelName(name string, state int, createdBy string) bool {
-	db.Create(&madame{
-		Name:      name,
-		State:     state,
-		CreatedBy: createdBy,
+func AddModelName(name string, state int, createdBy string, parentId int) bool {
+	db.Create(&Madalena{
+		ModuleName: name,
+		State:      state,
+		CreatedBy:  createdBy,
+		ParentId:   parentId,
 	})
 
 	return true
 }
 
 func ExistModelNameByID(id int) bool {
-	var modelName madame
+	var modelName Madalena
 	db.Select("id").Where("id = ?", id).First(&modelName)
 	if modelName.ID > 0 {
 		return true
@@ -51,13 +53,13 @@ func ExistModelNameByID(id int) bool {
 }
 
 func DeleteModelName(id int) bool {
-	db.Where("id = ?", id).Delete(&madame{})
+	db.Where("id = ?", id).Delete(&Madalena{})
 
 	return true
 }
 
 func EditModelName(id int, data interface{}) bool {
-	db.Model(&madame{}).Where("id = ?", id).Updates(data)
+	db.Model(&Madalena{}).Where("id = ?", id).Updates(data)
 
 	return true
 }
